--- a/frontFarm/src/app/pages/etiquetas/label-designer/label-designer.component.html
+++ b/frontFarm/src/app/pages/etiquetas/label-designer/label-designer.component.html
@@ -1,47 +1,79 @@
 <div class="designer">
   <div class="sidebar">
-    <h3>Diseño</h3>
-    <label>Nombre</label>
+    <h3 class="titulo text-center">Diseño</h3>
+    <label style="margin-right: 1rem;">Nombre</label>
     <input [(ngModel)]="design.nombre" />
 
-    <h4>Tamaño etiqueta (mm)</h4>
+    <h4 class="subtitulo text-center mt-1">Tamaño etiqueta (mm)</h4>
     <div class="grid">
       <label>Ancho</label><input type="number" [(ngModel)]="design.widthMm">
       <label>Alto</label><input type="number" [(ngModel)]="design.heightMm">
       <label>Margen</label><input type="number" [(ngModel)]="design.marginMm">
     </div>
 
-    <h4>Hoja (mm)</h4>
+    <h4 class="subtitulo text-center mt-1">Hoja (mm)</h4>
     <div class="grid">
-      <label>Page W</label><input type="number" [(ngModel)]="design.pageWidthMm">
-      <label>Page H</label><input type="number" [(ngModel)]="design.pageHeightMm">
+      <label>Ancho pág.</label><input type="number" [(ngModel)]="design.pageWidthMm">
+      <label>Alto pág.</label><input type="number" [(ngModel)]="design.pageHeightMm">
       <label>Cols</label><input type="number" [(ngModel)]="design.cols">
-      <label>Rows</label><input type="number" [(ngModel)]="design.rows">
+      <label>Rens</label><input type="number" [(ngModel)]="design.rows">
       <label>Gap X</label><input type="number" [(ngModel)]="design.gapXmm">
       <label>Gap Y</label><input type="number" [(ngModel)]="design.gapYmm">
     </div>
 
-    <h4>Agregar elemento</h4>
-    <button (click)="addText('nombre')">Nombre</button>
-    <button (click)="addText('renglon1')">Renglón 1</button>
-    <button (click)="addText('renglon2')">Renglón 2</button>
-    <button (click)="addPrice()">Precio</button>
-    <button (click)="addBarcode()">Código de barras</button>
+    <div>
+      <h4 class="subtitulo text-center mt-1">Agregar elemento</h4>
+      <div class="row mb-1">
+        <div class="col-4">
+          <button class="btn-rojo-chico" (click)="addText('nombre')">Nombre</button>
+        </div>
+        <div class="col-4" style="text-align: center;">
+          <button class="btn-rojo-chico" (click)="addText('renglon1')">Renglón 1</button>
+        </div>
+        <div class="col-4" style="text-align: end;">
+          <button class="btn-rojo-chico" (click)="addText('renglon2')">Renglón 2</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-5">
+          <button class="btn-rojo-chico" (click)="addPrice()">Precio</button>
+        </div>
+        <div class="col-7" style="text-align: end;">
+          <button class="btn-rojo-chico" (click)="addBarcode()">Código de barras</button>
+        </div>
+      </div>
+    </div>
 
     <div *ngIf="selected">
-      <h4>Propiedades</h4>
-      <div>Tipo: {{selected.type}}</div>
-
+      <h4 class="subtitulo text-center mt-1">Propiedades</h4>
+      <div style="text-align: center;">Tipo: <span><strong>{{selected.type}}</strong></span></div>
       <div *ngIf="selected.type!=='barcode'">
-        <label>Fuente (pt)</label><input type="number" [(ngModel)]="selected.fontSize">
-        <label><input type="checkbox" [(ngModel)]="selected.bold"> Negritas</label>
-        <label>Alineación</label>
-        <select [(ngModel)]="selected.align">
-          <option>left</option><option>center</option><option>right</option>
-        </select>
-        <label>Prefix</label><input [(ngModel)]="selected.prefix">
-        <label>Suffix</label><input [(ngModel)]="selected.suffix">
-        <label><input type="checkbox" [(ngModel)]="selected.uppercase"> MAYÚSCULAS</label>
+        <div>
+          <label style="margin-right: 1rem;">Fuente (pt)</label><input type="number" [(ngModel)]="selected.fontSize"
+            style="width: 4rem;">
+        </div>
+        <div class="row">
+          <div class="col-5">
+            <label><input type="checkbox" [(ngModel)]="selected.bold"> Negritas</label>
+          </div>
+          <div class="col-7" style="text-align: end;">
+            <label style="margin-right: 0.5rem;">Alineación</label>
+            <select [(ngModel)]="selected.align">
+              <option>left</option>
+              <option>center</option>
+              <option>right</option>
+            </select>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <label style="margin-right: 0.5rem;">Prefix</label><input [(ngModel)]="selected.prefix">
+          </div>
+          <div class="col-6">
+            <label style="margin-right: 0.5rem; text-align: end;">Suffix</label><input [(ngModel)]="selected.suffix">
+          </div>
+          <label><input type="checkbox" [(ngModel)]="selected.uppercase"> MAYÚSCULAS</label>
+        </div>
       </div>
 
       <div *ngIf="selected.type==='barcode'">
@@ -68,22 +100,13 @@
 
   <!-- Área de etiqueta (preview) -->
   <div class="canvas-wrap">
-    <div class="label-canvas"
-         [style.width]="design.widthMm + 'mm'"
-         [style.height]="design.heightMm + 'mm'"
-         (click)="selected=null">
+    <div class="label-canvas" [style.width]="design.widthMm + 'mm'" [style.height]="design.heightMm + 'mm'"
+      (click)="selected=null">
 
       <div class="label-inner" [style.padding]="(design.marginMm || 0) + 'mm'">
-        <div *ngFor="let el of design.elements; let idx = index"
-             class="el"
-             [class.selected]="el===selected"
-             [style.left.%]="el.x"
-             [style.top.%]="el.y"
-             [style.width.%]="el.w"
-             [style.height.%]="el.h"
-             (click)="$event.stopPropagation(); selected=el"
-             cdkDrag
-             (cdkDragEnded)="onDragEnd($event, el)">
+        <div *ngFor="let el of design.elements; let idx = index" class="el" [class.selected]="el===selected"
+          [style.left.%]="el.x" [style.top.%]="el.y" [style.width.%]="el.w" [style.height.%]="el.h"
+          (click)="$event.stopPropagation(); selected=el" cdkDrag (cdkDragEnded)="onDragEnd($event, el)">
 
           <ng-container [ngSwitch]="el.type">
             <div *ngSwitchCase="'text'" [ngStyle]="textStyle(el)">
@@ -105,9 +128,7 @@
     <div class="design-list">
       <h4>Mis diseños guardados</h4>
       <ul>
-        <li *ngFor="let d of disenos"
-            (click)="load(d)"
-            [class.active]="d._id===design._id">
+        <li *ngFor="let d of disenos" (click)="load(d)" [class.active]="d._id===design._id">
           {{ d.nombre }}
           <button class="mini" (click)="remove(d, $event)">Borrar</button>
         </li>
